finished hero section, added research focus

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --color-cordovan: #902D41;
   --color-fern: #44763B;
   --color-ash: #94A191;
-  --color-gr-orange: #EF709B;
+  --color-gr-orange: #c06316;
 
 }
 
