--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,15 @@ html {
 body {
   font-family: "Raleway", sans-serif;
 }
+
+.mapboxgl-popup-content {
+    min-width: 300px;
+    width: fit-content;
+    padding: 0;
+    margin: 0;
+    border-radius: 1.5rem;
+}
+
+.mapboxgl-popup-close-button {
+    display: none;
+}
