comments, refactoring, and documentation updates

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,6 @@
   --color-fern: #44763B;
   --color-ash: #94A191;
   --color-gr-orange: #c06316;
-
-  --box-sec: #FFFFFF;
-
 }
 
 /* For some reason these need to be rgb or it breaks */
@@ -32,7 +29,6 @@
 
   /* Platinum is really just a highlight color, so just make it dark for the dark mode.*/
   --color-platinum: #1f273f;
-  --box-sec: #1f273f;
 }
 
 @layer utilities {
@@ -51,10 +47,6 @@
   .text-heading-3 {
     color: rgb(var(--heading-3));
   }
-
-  .light-box-sec {
-    color: rgb(var(--box-sec));
-  }
 }
 
 html {
@@ -65,6 +57,7 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+/* Mapbox Popup Customization */
 .mapboxgl-popup-content {
     min-width: 300px;
     width: fit-content;
